gcc/testsuite/rust/rustc/ui/issues/issue-18611.rs
fn add_state(op: <isize as HasState>::State) {
// { dg-error ".E0277." "" { target *-*-* } .-1 }
}

trait HasState {
    type State;
}

fn main() {}

